Prevented breadcrumbs from wrapping mid-crumb.

--- a/public/stylesheets/breadcrumbs.css
+++ b/public/stylesheets/breadcrumbs.css
@@ -5,6 +5,7 @@
 
 #breadcrumbs a {
   color: #404040;
+  white-space: nowrap;
   text-decoration: none;
 }
 
